Fixed apply button text align

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ p {
     background-color: #d8d8d8;
 }
 .x-wide {
+    font-size: 1.4em;
     width: 230px !important;
     height: 50px;
     background-color: transparent !important;
